[project]
name = "lysqlnb"
version = "0.1.0"
description = "A library for reading and validating SQL notebook files."
readme = "README.md"
license = "MIT"
license-files = ["LICENCE"]
authors = [
    { name = "Leyton Addison-Roach", email = "git@laddisonroach.com" },
]
requires-python = ">=3.14"
keywords = ["notebook", "sql"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[project.urls]
Repository = "https://github.com/leyts/lysqlnb"
Issues = "https://github.com/leyts/lysqlnb/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-datadir>=1.8.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 79

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "TD",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "ANN201",
    "D100",
    "D103",
    "D104",
    "PLR2004",
    "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
